<resources>
    <string name="app_name">Tmdb</string>


    <!-- Base TMDB Image Url  -->
    <string name="tmdb_image_url">http://image.tmdb.org/t/p/</string>
    <!-- TMDB Image Sizes-->
    <string name="image_size_185">w185</string>
    <string name="image_size_500">w500</string>
    <string name="image_size_780">w780</string>
    <string name="image_size_original">original</string>

    <!-- Error Message -->
    <string name="error_loading">Could not fetch movies!</string>
    <string name="error_no_results">No Movie found :(</string>

    <string name="hint_search">Search Movies</string>

    <!--TextView Titles -->
    <string name="tv_release_year">Release Year:</string>
    <string name="tv_title_plot">Plot:</string>
    <string name="tv_title_trailers">Trailers:</string>
    <string name="tv_title_reviews">Reviews:</string>
    <string name="tv_title_rating">Rating</string>
    <string name="tv_title_popularity">Popularity:</string>
    <string name="tv_title_vote_count">Vote Count:</string>

    <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <!-- Placeholders -->
    <string name="place_holder_rating">%s Ratings</string>

    <!-- Youtube Video ThumbnailUrls -->
    <string name="thumbnail_default">http://img.youtube.com/vi/%s/default.jpg</string>
    <string name="thumbnail_high_quality">http://img.youtube.com/vi/%s/hqdefault.jpg</string>
    <string name="thumbnail_medium_quality">http://img.youtube.com/vi/%s/mqdefault.jpg</string>
    <string name="thumbnail_standard_definition">http://img.youtube.com/vi/%s/sddefault.jpg</string>
    <string name="thumbnail_max_resolution">http://img.youtube.com/vi/%s/maxresdefault.jpg</string>

    <!-- For Shared Element Transitions -->
    <string name="detail_icon_transition_name" translatable="false">TN_DetailIcon</string>

    <string name="image_description">Image</string>
</resources>
